--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pay My Buddy</title>
+    <title>Home page</title>
+    <link th:href="@{/css/style.css}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
 </head>
 <body>
-<h1>Welcome to pay my buddy</h1>
+<div class="home-container">
+   <div class="menu">
+       <p class="company">PayMyBuddy</p>
+       <div class="menu-items">
+           <p class="menu-item">Home</p>
+           <p class="menu-item">Transfer</p>
+           <p class="menu-item">Profil</p>
+           <p class="menu-item">Contact</p>
+           <p class="menu-item">Log off</p>
+       </div>
+   </div>
+    <div class="navigation">
+        <p class="nav-item">Home /</p>
+    </div>
+    <div class="main-content">
+        <div class="card main-content-card">
+            <h1>Welcome to PayMyBuddy</h1>
+        </div>
+    </div>
+
+</div>
 
 
 </body>
