--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,19 +10,7 @@
 </head>
 <body>
 <div class="home-container">
-   <div class="menu">
-       <p class="company">PayMyBuddy</p>
-       <div class="menu-items">
-           <p class="menu-item">Home</p>
-           <p class="menu-item">Transfer</p>
-           <p class="menu-item">Profil</p>
-           <p class="menu-item">Contact</p>
-           <p class="menu-item">Log off</p>
-       </div>
-   </div>
-    <div class="navigation">
-        <p class="nav-item">Home /</p>
-    </div>
+    <div th:insert="menu">...</div>
     <div class="main-content">
         <div class="card main-content-card">
             <h1>Welcome to PayMyBuddy</h1>
