Adding Transfer modules.

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -14,7 +14,7 @@
     <p class="company">PayMyBuddy</p>
     <div class="menu-items">
       <p class="menu-item" onclick="window.open('http://localhost:8080/home', '_self')">Home</p>
-      <p class="menu-item">Transfer</p>
+      <p class="menu-item" onclick="window.open('http://localhost:8080/transfer', '_self')">Transfer</p>
       <p class="menu-item" onclick="window.open('http://localhost:8080/profile', '_self')">Profile</p>
       <p class="menu-item" onclick="window.open('http://localhost:8080/friends', '_self')">Contact</p>
       <p class="menu-item" onclick="window.open('http://localhost:8080/logout', '_self')">Log off</p>
