--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -158,3 +158,33 @@
     display: flex;
     flex-direction: column;
 }
+
+/*
+/////// TRANSFER
+ */
+
+.transfer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.transfer-menu-container {
+    display: flex;
+}
+
+.transaction-history-container {
+    width: 75%;
+    margin-top: 1em;
+    display: flex;
+    flex-direction: column;
+}
+
+.transfer-menu-item {
+    margin: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
