Adding link to Sign up and Sign in.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -51,6 +51,14 @@
     margin-top: 2em;
 }
 
+.signup-link {
+    margin-top: 1em;
+}
+
+.sign-up-title {
+    color: black;
+}
+
 
 /*
 //// SIGN UP PAGE
