--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,6 +12,7 @@
         <div class="card">
             <form class="form-signin" method="post" action="/login">
                 <h1 class="login-title">PayMyBuddy</h1>
+                <h2 class="sign-up-title">Sign in</h2>
                 <div class="login-element">
                     <input type="text" id="username" name="username" class="form-control" placeholder="Email" required="" autofocus="">
                 </div>
@@ -24,6 +25,7 @@
                 </div>
                 <button class="btn btn-lg btn-primary btn-block login-button" type="submit">Login</button>
             </form>
+            <p class="signup-link">Don't have an account ? <a href="http://localhost:8080/signup">Sign up.</a> </p>
         </div>
     </div>
 </body>
