--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -12,7 +12,7 @@
     <div class="card">
         <div class="form-signin">
             <h1 class="login-title">PayMyBuddy</h1>
-            <h2>Sign up</h2>
+            <h2 class="sign-up-title">Sign up</h2>
             <div class="login-element">
                 <label class="label">Enter your email</label>
                 <label for="username"></label><input type="text" id="username" name="username" class="form-control" placeholder="Email" required="" autofocus="">
@@ -23,6 +23,7 @@
             </div>
             <button onclick="postSignUp()" id="login-button" class="btn btn-lg btn-primary btn-block login-button" type="submit">Sign up</button>
         </div>
+        <p class="signup-link">Already have an account ? <a href="http://localhost:8080/login">Sign in.</a> </p>
     </div>
 </div>
 
