--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -196,3 +196,13 @@
     align-items: center;
 
 }
+
+/*
+////// BANK ACCOUNT INFORMATION REGISTER
+ */
+
+.bank-account-information-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
