--- a/src/main/resources/templates/bank-transfer.html
+++ b/src/main/resources/templates/bank-transfer.html
@@ -68,7 +68,7 @@
     fetch(URL, {
       method: 'POST',
     })
-            .then(res => window.open("http://localhost:8080/transfer", "_self"))
+            .then(() => window.open("http://localhost:8080/transfer", "_self"))
   }
 </script>
 
