--- a/src/main/resources/templates/app-transfer.html
+++ b/src/main/resources/templates/app-transfer.html
@@ -13,8 +13,9 @@
 <div class="friendList-container">
     <h1>Transfer money to your buddy</h1>
     <div class="d-flex">
-        <p><strong>Your sold is </strong></p>
+        <p><strong>Your sold is :&nbsp </strong></p>
         <p th:text="${sold}"></p>
+        <p>€</p>
     </div>
     <div class="friendList card">
         <h1>Choose a friend</h1>
