--- a/src/main/resources/templates/bank-transfer.html
+++ b/src/main/resources/templates/bank-transfer.html
@@ -65,6 +65,7 @@
     })
             .then(res => res.text())
             .then(() => openNewWindow())
+            .catch(error => console.log(error))
   }
 
   const openNewWindow = () => {
