--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -13,15 +13,20 @@
         <div class="form-signin">
             <h1 class="login-title">PayMyBuddy</h1>
             <h2 class="sign-up-title">Sign up</h2>
+            <h3 th:text="${message}"></h3>
             <div class="login-element">
-                <label class="label">Enter your email</label>
-                <label for="username"></label><input type="text" id="username" name="username" class="form-control" placeholder="Email" required="" autofocus="">
+                <form th:action="@{/signup}" th:method="post" th:object="${userAuth}">
+                    <label class="label">Enter your email</label>
+                    <label for="username"></label>
+                    <input type="text" id="username" name="username" class="form-control" placeholder="Email"
+                           required="" autofocus="" th:field="*{username}">
+                    <label class="label">Enter your password</label>
+                    <label for="password"></label>
+                    <input type="password" id="password" name="password" class="form-control" placeholder="Password"
+                           required="" th:field="*{password}">
+                    <button id="login-button" class="btn btn-lg btn-primary btn-block login-button" type="submit">Sign up</button>
+                </form>
             </div>
-            <div class="login-element">
-                <label class="label">Enter your password</label>
-                <label for="password"></label><input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
-            </div>
-            <button onclick="postSignUp()" id="login-button" class="btn btn-lg btn-primary btn-block login-button" type="submit">Sign up</button>
         </div>
         <p class="signup-link">Already have an account ? <a href="http://localhost:8080/login">Sign in.</a> </p>
     </div>
@@ -29,23 +34,3 @@
 
 </body>
 </html>
-            <script>
-                const postSignUp = () => {
-                  let username = document.getElementById("username").value;
-                  let password = document.getElementById("password").value;
-                    fetch('http://localhost:8080/api/v1/authentication/add', {
-                        redirect: 'follow',
-                        method: 'POST',
-                        headers: {
-                            'Accept': 'application/json',
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify({ "username": username, "password": password})
-                    })
-                        .then(res => {
-                            res.json()
-                            console.log(res.json())
-                        })
-                        .then(() => window.open("http://localhost:8080/login", "_self"))
-                }
-            </script>
