--- a/src/main/resources/templates/app-transfer.html
+++ b/src/main/resources/templates/app-transfer.html
@@ -19,6 +19,7 @@
     </div>
     <div class="friendList card">
         <h1>Choose a friend</h1>
+        <h3 th:text="${message}"></h3>
         <table class="table">
             <thead>
             <th>Firstname</th>
