--- a/src/main/resources/templates/app-transfer-friend.html
+++ b/src/main/resources/templates/app-transfer-friend.html
@@ -18,28 +18,17 @@
     <p>€</p>
   </div>
   <div class="form-group">
-    <label for="amount">Amount</label>
-    <input type="text" class="form-control" id="amount" aria-describedby="amountHelp" placeholder="0.0">
-    <small id="amountHelp" class="form-text text-muted">The amount must be superior to 0.0</small>
+    <form th:action="@{/app-transfer-friend}" th:method="post" th:object="${transfer}" >
+      <label for="amount">Amount</label>
+      <input type="text" class="form-control" id="amount" aria-describedby="amountHelp" th:field="*{amount}">
+      <label for="id">Id</label>
+      <input type="text" id="id" th:field="*{receiverId}" hidden>
+      <small id="amountHelp" class="form-text text-muted">The amount must be superior to 0.0</small>
+      <button type="submit" class="btn btn-primary">Send</button>
+    </form>
   </div>
-  <button type="submit" class="btn btn-primary" th:data-name="${friendId}"
-          th:onclick="handleSubmit(this.getAttribute('data-name'))">Send</button>
 
 </div>
 
 </body>
 </html>
-
-<script>
-  const handleSubmit = (id) => {
-    let amount = document.getElementById("amount").value;
-    console.log(amount)
-
-    fetch('http://localhost:8080/api/v1/transaction/send?receiverId=' + id + "&amount=" + amount, {
-      redirect: 'follow',
-      method: 'POST',
-    })
-            .then(res => res.text())
-            .then(() => window.open("http://localhost:8080/transfer", "_self"))
-  }
-</script>
