--- a/src/main/resources/templates/bank-transfer.html
+++ b/src/main/resources/templates/bank-transfer.html
@@ -13,7 +13,6 @@
   <div th:insert="menu">...</div>
   <div class="card">
     <h1>Welcome to PayMyBuddy</h1>
-    <form>
       <div class="d-flex">
         <p><strong>Your sold is: &nbsp</strong></p>
         <p> </p>
@@ -21,55 +20,24 @@
         <p>€</p>
       </div>
       <div>
-        <p>Transfer to: </p>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="selectRadio" value="bank" id="receiverBank">
-          <label class="form-check-label" for="receiverBank">
-            Bank Account
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="selectRadio" value="app" id="receivedApp">
-          <label class="form-check-label" for="receivedApp">
-            PayMyBuddy
-          </label>
-        </div>
+        <h3 th:text="${message}"></h3>
+        <form th:action="@{/bank-transfer}" th:method="post" th:object="${amountBankObj}" >
+          <div class="checkbox-transfer" th:object="${checkbox}">
+            <label for="toBank">To Bank Account <br></label>
+            <input type="checkbox" name="toBank" id="toBank" th:field="*{toBank}"><br>
+            <label for="toApp">To App Account <br></label>
+            <input type="checkbox" name="toApp" id="toApp" th:field="*{toApp}"><br>
+          </div>
+          <div>
+            <label class="label">Enter the amount to transfer:</label>
+            <label for="bankAmount"></label>
+            <input type="text" id="bankAmount" name="bankAmount" class="form-control" placeholder="Amount"
+                   required="" autofocus="" th:field="*{amount}">
+          </div>
+          <button class="btn btn-lg btn-primary btn-block login-button" type="submit">Send</button>
+        </form>
       </div>
-      <div class="form-group">
-        <label for="amount">Amount</label>
-        <input type="text" class="form-control" id="amount" aria-describedby="amountHelp" placeholder="0.0">
-        <small id="amountHelp" class="form-text text-muted">The amount must be superior to 0.0</small>
-      </div>
-      <button type="submit" class="btn btn-primary" onclick="handleSubmit()">Send</button>
-    </form>
   </div>
 </div>
 </body>
 </html>
-
-<script>
-  const handleSubmit = () => {
-      let element = document.getElementsByName('selectRadio');
-      let select = null;
-      for(let i = 0; i < element.length; i++) {
-        if(element[i].checked) {
-          select = element[i].value
-        }
-      }
-    let amount = document.getElementById("amount").value;
-    let URL = select === "app" ? 'http://localhost:8080/api/v1/banktransaction/to?amount=' + amount :
-            'http://localhost:8080/api/v1/banktransaction/from?amount=' + amount;
-
-    fetch(URL, {
-      method: 'POST',
-    })
-            .then(res => res.text())
-            .then(() => openNewWindow())
-            .catch(error => console.log(error))
-  }
-
-  const openNewWindow = () => {
-    window.open("http://localhost:8080/transfer", "_self")
-  }
-</script>
-
